[Web Animations] KeyframeEffect.pseudoElement does not return a valid string when targeting ::marker or ::first-letter https://bugs.webkit.org/show_bug.cgi?id=218741 <rdar://problem/71229846>

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark two new PASS results showing that KeyframeEffect.pseudoElement shows the correct value
when targeting ::marker or ::first-letter.

* web-platform-tests/web-animations/interfaces/Animatable/animate-expected.txt:

Source/WebCore:

We used to use PseudoElement::pseudoElementNameForEvents() to go from PseudoId to a String, but PseudoElement
only knows about ::before and ::after and not about valid pseudo-elements. We remove that method and create an
equivalent in WebAnimationUtilities that knows about all public pseudo-elements.

* animation/DeclarativeAnimation.cpp:
(WebCore::DeclarativeAnimation::enqueueDOMEvent):
* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::pseudoElement const):
* animation/WebAnimationUtilities.cpp:
(WebCore::pseudoIdAsString):
* animation/WebAnimationUtilities.h:
* dom/PseudoElement.cpp:
(WebCore::PseudoElement::pseudoElementNameForEvents): Deleted.
* dom/PseudoElement.h:


Canonical link: https://commits.webkit.org/231413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269623 268f45cc-cd09-0410-ab3c-d52691b4dbfc